welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var nbBiscuit=0
^Poucet:2: error: illegal start of simple expression
while(!sortieTrouvee())){
                       ^